--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
     "dependencies": {
         "express": "~4.13.3",
         "mongoose": "~4.2.7",
-        "body-parser": "~1.14.1"
+        "body-parser": "~1.14.1",
+        "mongodb":"~3.0.7"
     }
 }
